--- a/dataway/src/main/resources/application.properties
+++ b/dataway/src/main/resources/application.properties
@@ -7,9 +7,30 @@ HASOR_DATAQL_DATAWAY_ADMIN=true
 HASOR_DATAQL_DATAWAY_API_URL=/api/
 # （可选）ui 的工作路径，只有开启 ui 管理功能后才有效
 HASOR_DATAQL_DATAWAY_UI_URL=/interface-ui/
-HASOR_DATAQL_FX_PAGE_DIALECT=mysql
+# HASOR_DATAQL_FX_PAGE_DIALECT=mysql
 
-spring.datasource.url=jdbc:mysql://localhost:3306/suanpan?serverTimezone=GMT%2B8
-spring.datasource.username=root
-spring.datasource.password=123456
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# postgresql
+# spring.datasource.url=jdbc:postgresql://localhost:54321/suanpan?useSSL=false
+# spring.datasource.username=postgres
+# spring.datasource.password=123456
+# spring.datasource.driver-class-name=org.postgresql.Driver
+
+# mysql
+# spring.datasource.url=jdbc:mysql://localhost:3306/suanpan?serverTimezone=GMT%2B8
+# spring.datasource.username=root
+# spring.datasource.password=123456
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# oracle
+# spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.Oracle10gDialect
+# spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@10.88.36.133:1521:xe
+spring.datasource.username=test
+spring.datasource.password=test123
+
+# sqlserver
+# spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+# spring.datasource.url=jdbc:sqlserver://127.0.0.1:1433; databaseName=smxTest
+# spring.datasource.username=sa
+# spring.datasource.password=zlf123456
