--- a/dataway/pom.xml
+++ b/dataway/pom.xml
@@ -14,6 +14,14 @@
 	<name>dataway</name>
 	<description>Demo project for Spring Boot</description>
 
+	<repositories>
+		<repository>
+			<id>ali-maven</id>
+			<url>http://maven.aliyun.com/nexus/content/groups/public</url>
+		</repository>
+	</repositories>
+
+
 	<properties>
 		<java.version>11</java.version>
 	</properties>
