--- a/dataway/src/main/resources/application.properties
+++ b/dataway/src/main/resources/application.properties
@@ -16,18 +16,18 @@ HASOR_DATAQL_DATAWAY_UI_URL=/interface-ui/
 # spring.datasource.driver-class-name=org.postgresql.Driver
 
 # mysql
-# spring.datasource.url=jdbc:mysql://localhost:3306/suanpan?serverTimezone=GMT%2B8
-# spring.datasource.username=root
-# spring.datasource.password=123456
-# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/suanpan?serverTimezone=GMT%2B8
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # oracle
 # spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.Oracle10gDialect
 # spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
-spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@10.88.36.133:1521:xe
-spring.datasource.username=test
-spring.datasource.password=test123
+# spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+# spring.datasource.url=jdbc:oracle:thin:@10.88.36.133:1521:xe
+# spring.datasource.username=test
+# spring.datasource.password=test123
 
 # sqlserver
 # spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
