--- a/dataway/src/main/resources/application.properties
+++ b/dataway/src/main/resources/application.properties
@@ -16,9 +16,9 @@ HASOR_DATAQL_DATAWAY_UI_URL=/interface-ui/
 # spring.datasource.driver-class-name=org.postgresql.Driver
 
 # mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/suanpan?serverTimezone=GMT%2B8
+spring.datasource.url=jdbc:mysql://47.102.131.179:3306/tableau_test?serverTimezone=GMT%2B8
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=1234@qwer
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # oracle
